--- a/literature.bib
+++ b/literature.bib
@@ -302,7 +302,7 @@ doi = {10.1121/1.1984860}
 	author = {Ono Sokki},
 	title = {What is sound level meter?},
 	howpublished = {\url{https://www.onosokki.co.jp/English/hp_e/whats_new/SV_rpt/SV_7/sv7_5.htm}},
-	note = {Accessed: 2023-01-03}
+	note = {Online; accessed: 2023-01-03}
 }
 
 
@@ -333,5 +333,30 @@ doi = {10.1121/1.1984860}
 	author = {NoiseMeters Inc.},
 	title = {{Octave Band Filters}},
 	howpublished = {\url{https://www.noisemeters.com/help/faq/octave-filters/}},
-	note = {Accessed: 2023-01-04}
+	note = {Online; accessed: 2023-01-04}
+}
+
+@misc{weighting_filters,
+	author = {NoiseMeters Inc.},
+	title = {{Frequency Weighting}},
+	howpublished = {\url{https://www.noisemeters.com/help/faq/frequency-weighting/}},
+	note = {Online; accessed: 2023-01-05}
+}
+
+@techreport{IEC61672,
+	type = {Standard},
+	month = sep,
+	year = {2013},
+	title = {{IEC 61672-1:2013(E): Electroacoustics - Sound level meters - Part 1: Specifications}},
+	volume = {2013},
+	address = {Geneva, CH},
+	institution = {International Electrotechnical Commission}
+}
+
+@misc{foto_ubx,
+	author = {Wiener Linien},
+	title = {{Wiens neue U-Bahn: Der erste X-Wagen ist fertig!}},
+	howpublished = {\url{https://www.wienerlinien.at/eportal3/ep/contentView.do/pageTypeId/66526/programId/74579/contentTypeId/1001/channelId/-48278/contentId/5001449}},
+	year = {2020},
+	note = {Online; accessed: 2023-01-05}
 }
