--- a/Chapter2_Theory.tex
+++ b/Chapter2_Theory.tex
@@ -352,7 +352,7 @@ The metro train Type X, also known as the X-Wagen, was developed by Siemens and 
 		\label{fig:ubx_model_sideview}
 	\end{subfigure}
 	
-	\caption{3D model of the X-Wagen in its basic configuration.}
+	\caption{Simplified 3D model of the X-Wagen in its basic configuration.}
 	\label{fig:ubx_sketup_model}
 \end{figure}
 
